# toolbag-plugin-HashAndBase64

./: .gitignore  LICENSE  README.md  changelog.md  tool.json  ui.json
.github/scripts/: update-registry.mjs
.github/workflows/: release.yml
sidecar/: Cargo.toml
sidecar/src/: main.rs
