[package]
name = "toolbag-plugin-hashbase64-sidecar"
version = "0.1.0"
edition = "2021"
description = "Toolbag plugin sidecar for Hash & Base64 utilities"
license = "MIT"

[[bin]]
name = "sidecar-windows-x64"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
digest = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
